--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <h3 class="mb-5">
         <em>지원 프로그램</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="naver.com">Find Out More</a>
     </div>
     <div class="overlay"></div>
   </header>
