--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>contract</title>
+  <title>Contract</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
       <h3 class="mb-5">
         <em>지원 프로그램</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" onclick="location.href='www.naver.com' ">Find Out More</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" onclick="window.open('naver.com')">Find Out More</a>
     </div>
     <div class="overlay"></div>
   </header>
