--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
   <!-- Callout -->
   <section class="callout">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5">Welcome to
-        <em>your</em>
-        next website!</h2>
-      <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
+      <h2 class="mx-auto mb-5">한 번의 터치로
+        
+        안전하게 계약서를 작성하세요!</h2>
+      <a class="btn btn-primary btn-xl" href="https://blog.naver.com/ricostellar">살펴 보기</a>
     </div>
   </section>
 
