--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="container text-center">
       <h2 class="mx-auto mb-5">한 번의 터치로
         
-        안전하게 계약서를 작성하세요!</h2>
+        안전하게 계약서를!</h2>
       <a class="btn btn-primary btn-xl" href="https://blog.naver.com/ricostellar">살펴 보기</a>
     </div>
   </section>
